# claudekit

./: .gitignore  LICENSE  README.md  pyproject.toml
claudekit/: __init__.py  _defaults.py  _version.py
claudekit-docs/: README.md
claudekit-docs/docs/: index.md
claudekit/agents/: __init__.py  _agent.py  _budget.py  _hooks.py  _inspector.py  _runner.py
claudekit/batches/: __init__.py  _builder.py  _manager.py  _result.py
claudekit/client/: __init__.py  _async_tracked.py  _bedrock.py  _factory.py  _foundry.py  _session.py  _tracked.py  _vertex.py
claudekit/errors/: __init__.py  _base.py  _codes.py  _rich.py
claudekit/memory/: __init__.py  _entry.py  _injection.py  _store.py
claudekit/models/: __init__.py  _registry.py  _selector.py
claudekit/orchestration/: __init__.py  _orchestrator.py  _result.py  _router.py
claudekit/plugins/: __init__.py  _loader.py  _plugin.py  _prebuilt.py  _registry.py
claudekit/precheck/: __init__.py  _token_counter.py
claudekit/prompts/: __init__.py  _comparison.py  _manager.py  _storage.py  _version.py
claudekit/security/: __init__.py  _context.py  _layer.py  _policy.py
claudekit/sessions/: __init__.py  _aggregator.py  _config.py  _manager.py  _session.py
docs/: README_MEMORY.md  README_ORCHESTRATION.md  README_PLUGIN.md  README_PRECHECK.md  README_PROMPT.md  README_SECURITY.md  README_TESTING.md  README_agents.md  README_batches.md  README_batches_combined.md  README_client.md  README_errors.md  README_models.md  README_plugins.md  README_prompts.md  README_sessions.md  README_skills.md  README_thinking.md  README_tools.md
tests/: test_errors.py  test_memory.py  test_mock_client.py  test_models.py  test_new_testing.py  test_plugins.py  test_prompts.py  test_security.py  test_session.py  test_tools.py
(+69 files in other folders)
