[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudekit"
version = "0.1.0"
description = "Production-grade Python developer toolkit wrapping the entire Anthropic ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "claudekit contributors" }]
keywords = ["anthropic", "claude", "ai", "sdk", "toolkit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "anthropic>=0.86.0",
    "pydantic>=2.0",
    "anyio>=4.0",
    "httpx>=0.27.0",
    "claude-agent-sdk>=0.1.0",
    "mcp>=1.0.0",
    "opentelemetry-api>=1.0.0",
    "pytest>=7.0",
]

[project.optional-dependencies]
dev = [
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.0",
    "ruff>=0.1",
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/claudekit/claudekit"
Documentation = "https://github.com/claudekit/claudekit#readme"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N"]

[tool.mypy]
strict = true
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["claudekit"]

[tool.coverage.report]
show_missing = true
fail_under = 90
